--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-sticky-heading",
+	"id": "sticky-heading",
 	"name": "Sticky Headings",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
