--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,6 @@
 	"minAppVersion": "0.15.0",
 	"description": "Sticky Headings and Shows the heading level",
 	"author": "im.shenshen@qq.com",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"authorUrl": "https://github.com/imshenshen",
 	"isDesktopOnly": false
 }
